Virtual threads demo cleanup