@@ -6,19 +6,28 @@ import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
-import java.util.concurrent.ForkJoinPool;
-import java.util.concurrent.Future;
 import java.util.function.Supplier;
 
 public class Main {
     public static void main(String[] args) throws ExecutionException, InterruptedException {
-//        try (ExecutorService service = Executors.newFixedThreadPool(10)) {
+
+        /*
+         *               OVP KRONOS - VIRTUAL THREADS DEMO
+         *
+         * 1 - Fixed size pool  =>  Executors.newFixedThreadPool(10)
+         * 2 - ForkJoinPool     =>  ForkJoinPool.commonPool()
+         * 3 - Virtual Threads  =>  Executors.newVirtualThreadPerTaskExecutor()
+         */
+
+        generateNTaskWithExecutor(1_000_000, Executors.newVirtualThreadPerTaskExecutor());
+    }
+
+    private static void generateNTaskWithExecutor(int numberOfTasks, ExecutorService executor) throws InterruptedException, ExecutionException {
+
         List<CompletableFuture<Integer>> futures = new ArrayList<>();
-//        try (ExecutorService service = ForkJoinPool.commonPool()) {
+        try (ExecutorService service = executor) {
 
-        try (ExecutorService service = Executors.newVirtualThreadPerTaskExecutor()) {
-
-            for (int i = 0; i < 1_000_000; i++) {
+            for (int i = 0; i < numberOfTasks; i++) {
                 System.out.println("Submitting task " + i);
                 CompletableFuture<Integer> future = CompletableFuture.supplyAsync(getTask(i), service)
                                 .thenApply(taskNumber -> {
